Fix issue #289 with overflow-y/auto issues. I think I'd rather just put up with the jumping menu when scrollbar appears, which isn't really much of a problem.

--- a/site-default/templates-admin/styles/_jquery-ui.scss
+++ b/site-default/templates-admin/styles/_jquery-ui.scss
@@ -464,7 +464,7 @@
  *
  * http://docs.jquery.com/UI/Button#theming
  */
-.ui-button { display: inline-block; position: relative; padding: 0; margin-right: .1em; text-decoration: none !important;  font-weight: $bold-weight; cursor: pointer; text-align: center; zoom: 1; overflow: visible; *display: inline; *zoom: 1; } /* the overflow property removes extra width in IE */
+.ui-button { display: inline-block; position: relative; padding: 0; margin-right: .1em; text-decoration: none !important;  font-weight: $bold-weight; cursor: pointer; text-align: center; zoom: 1; overflow: visible; } /* the overflow property removes extra width in IE */
 .ui-button-icon-only { width: 2.2em; } /* to make room for the icon, a width needs to be set here */
 button.ui-button-icon-only { width: 2.4em; } /* button elements seem to need a little more width */
 .ui-button-icons-only { width: 3.4em; } 
@@ -799,7 +799,7 @@ select.ui-toggle-switch { display: none; }
 .ui-button:active, button.ui-button.ui-state-active, .ui-button.ui-state-active {
 	border: 1px solid #0c6aa6;
 	position: relative;
-	top: 1px;
+	top: 1px; /* RJCTMP */
 	box-shadow: 0 2px 2px rgba(12,106,106,0.5) inset, 0 1px 2px rgba(0,0,0,0.2) !important;
 		background: #058dff; /* Old browsers */
 		background: -moz-linear-gradient(top, #058dff 0%, #279cff 100%); /* FF3.6+ */
