--- a/site-default/templates-admin/styles/main-modern.css
+++ b/site-default/templates-admin/styles/main-modern.css
@@ -1,4 +1,5 @@
 /*@import url(http://fonts.googleapis.com/css?family=Arimo:400,700);*/
+/*$regular-font: Arimo, Arial, sans-serif; */
 /* Designed by Steve Matteson */
 /* FontFace Generated by FontPro */
 @font-face {
@@ -1194,9 +1195,7 @@ a {
   cursor: pointer;
   text-align: center;
   zoom: 1;
-  overflow: visible;
-  *display: inline;
-  *zoom: 1; }
+  overflow: visible; }
 
 /* the overflow property removes extra width in IE */
 .ui-button-icon-only {
@@ -1996,6 +1995,7 @@ select.ui-toggle-switch {
   border: 1px solid #0c6aa6;
   position: relative;
   top: 1px;
+  /* RJCTMP */
   box-shadow: 0 2px 2px rgba(12, 106, 106, 0.5) inset, 0 1px 2px rgba(0, 0, 0, 0.2) !important;
   background: #058dff;
   /* Old browsers */
@@ -2803,7 +2803,7 @@ table {
 body {
   background: #e1ebf2;
   font-size: 100%;
-  overflow-y: scroll; }
+  /* overflow-y: scroll;*/ }
 
 body,
 .ui-dialog,
@@ -2813,7 +2813,7 @@ input,
 th, td,
 textarea {
   font-weight: normal;
-  font-family: Arimo, Arial, sans-serif; }
+  font-family: Arial, sans-serif; }
 
 body {
   color: #222222; }
